tests/spec/non_conformant/errors/import/url/mixin/simple/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/url/mixin/simple"

#[allow(unused)]
use super::runner;

mod inside;

mod outside;
